--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="clock-container">
         <div class="clock-content">
-            <span id="hour"></span>
+            <span id="hour">--</span>
             <span>:</span>
-            <span id="minute"></span>
+            <span id="minute">--</span>
             <span>:</span>
-            <span id="second"></span>
+            <span id="second">--</span>
             <span id="ampm"></span>
         </div>
     </div>
